--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My GitHub Pages Site</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <link rel="apple-touch-icon" href="favicon.ico">
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-    <script src="js/main.js"></script>
-  </body>
+<head>
+  <title>My GitHub Pages Site</title>
+  <link href="css/pico.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="favicon.ico" rel="shortcut icon" type="image/png">
+  <link href="favicon.ico" rel="apple-touch-icon">
+</head>
+<body>
+<header class="header hero">
+  <h1>Tagging Page</h1>
+  <p>My supercool header</p>
+</header>
+<main class="container">
+
+  <label for="username">Username:</label>
+  <input id="username" name="username" type="text"><br><br>
+
+  <label for="password">Password:</label>
+  <input id="password" name="password" type="password"><br><br>
+
+  <label for="tagsInput">Tags:</label>
+  <textarea id="tagsInput" name="tagsInput" placeholder="tag1
+tag2
+tag3
+tag4"></textarea><br><br>
+
+  <button onclick="tagText()">Tag!</button>
+  <br><br>
+
+  <div id="tagsOutput"></div>
+</main>
+</body>
 </html>
