--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>My GitHub Pages Site</title>
+  <title>Jira tool</title>
   <link href="css/pico.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link href="favicon.ico" rel="shortcut icon" type="image/png">
@@ -26,10 +26,11 @@ tag2
 tag3
 tag4"></textarea><br><br>
 
-  <button onclick="tagText()">Tag!</button>
+  <button onclick="generateBase64()">Tag!</button>
   <br><br>
 
   <div id="tagsOutput"></div>
 </main>
+<script src="js/main.js"></script>
 </body>
 </html>
