--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ tag2
 tag3
 tag4"></textarea><br><br>
 
-  <button onclick="generateBase64()">Tag!</button>
+  <button onclick="tag()">Tag!</button>
   <br><br>
 
   <div id="tagsOutput"></div>
